# ai-pong

./: .gitignore  CLAUDE.md  CMakeLists.txt  DECISIONS.md  README.md  pong
.github/workflows/: ci.yml
docker/: Dockerfile  glx_present_shim.c
docs/: evaluation.md  formats.md  index.html  leaderboard.md  training.md
recipes/: evo-basic.recipe  evomem-rich.recipe  evomem.recipe  ppo-scratch.recipe  ppo-warmstart.recipe
src/agents/: agents.cpp  agents.hpp
src/bindings/: aipong_module.cpp  test_bindings.py
src/core/: pong_core.cpp  pong_core.hpp
src/league/: ladder.cpp  ladder.hpp  ratings_index.hpp
src/match/: controllers.cpp  controllers.hpp  match_runner.hpp
src/record/: rally_index.cpp  rally_index.hpp  recorder.cpp  recorder.hpp
src/renderers/imgui/: coview.cpp  main.cpp  train_plot.hpp  train_view.cpp
src/tests/: test_agents.cpp  test_core.cpp  test_league.cpp  test_match.cpp  test_record.cpp  test_train.cpp  test_trainview.cpp  test_util.hpp
src/tools/: aiming.cpp  bench.cpp  coevolve.cpp  evolve.cpp  gen_random_model.cpp  ladder.cpp  memuse.cpp  rallydb.cpp  reeval.cpp
src/train/: batch_forward.cpp  batch_forward.hpp  coevolve.cpp  coevolve.hpp  coview_data.hpp  evolve.cpp  evolve.hpp  ppo.py  prof.hpp  recipes.hpp  rng.hpp  train_log_view.hpp
